// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accept all call commands 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "action": "STEP",
        "line": 1,
        "type": "call",
      },
      Object {
        "action": "TURN_LEFT",
        "line": 2,
        "type": "call",
      },
      Object {
        "action": "TURN_RIGHT",
        "line": 3,
        "type": "call",
      },
      Object {
        "action": "BRICK_PUT",
        "line": 4,
        "type": "call",
      },
      Object {
        "action": "BRICK_TAKE",
        "line": 5,
        "type": "call",
      },
      Object {
        "action": "MARKER_SET",
        "line": 6,
        "type": "call",
      },
      Object {
        "action": "MARKER_REMOVE",
        "line": 7,
        "type": "call",
      },
    ],
    "line": 1,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`comments ignores multiline 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [],
    "line": 5,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`comments ignores single line 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [],
    "line": 5,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`function should accept basic body 1`] = `
Object {
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "STEP",
          "line": 2,
          "type": "call",
        },
      ],
      "identifier": "Test",
      "line": 3,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [],
    "line": 0,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`function should accept empty 1`] = `
Object {
  "functions": Array [
    Object {
      "body": Array [],
      "identifier": "Test",
      "line": 2,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [],
    "line": 0,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`if all conditions 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 2,
            "type": "call",
          },
        ],
        "condition": Object {
          "line": 1,
          "test": "IS_WALL",
          "type": "expression",
        },
        "elseBody": Array [],
        "line": 3,
        "type": "if",
      },
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 5,
            "type": "call",
          },
        ],
        "condition": Object {
          "line": 4,
          "test": "IS_BRICK",
          "type": "expression",
        },
        "elseBody": Array [],
        "line": 6,
        "type": "if",
      },
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 8,
            "type": "call",
          },
        ],
        "condition": Object {
          "line": 7,
          "test": "IS_MARKER",
          "type": "expression",
        },
        "elseBody": Array [],
        "line": 9,
        "type": "if",
      },
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 11,
            "type": "call",
          },
        ],
        "condition": Object {
          "line": 10,
          "test": "IS_NORTH",
          "type": "expression",
        },
        "elseBody": Array [],
        "line": 12,
        "type": "if",
      },
    ],
    "line": 3,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`if else 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "TURN_LEFT",
            "line": 2,
            "type": "call",
          },
        ],
        "condition": Object {
          "line": 1,
          "test": "IS_WALL",
          "type": "expression",
        },
        "elseBody": Array [
          Object {
            "action": "TURN_RIGHT",
            "line": 4,
            "type": "call",
          },
        ],
        "line": 5,
        "type": "if",
      },
    ],
    "line": 5,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`if negative condition 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 2,
            "type": "call",
          },
        ],
        "condition": Object {
          "condition": Object {
            "line": 1,
            "test": "IS_WALL",
            "type": "expression",
          },
          "line": 1,
          "type": "not",
        },
        "elseBody": Array [],
        "line": 3,
        "type": "if",
      },
    ],
    "line": 3,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`if nested 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "TURN_LEFT",
            "line": 2,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "action": "BRICK_TAKE",
                "line": 4,
                "type": "call",
              },
            ],
            "condition": Object {
              "line": 3,
              "test": "IS_BRICK",
              "type": "expression",
            },
            "elseBody": Array [],
            "line": 5,
            "type": "if",
          },
        ],
        "condition": Object {
          "line": 1,
          "test": "IS_WALL",
          "type": "expression",
        },
        "elseBody": Array [
          Object {
            "action": "TURN_RIGHT",
            "line": 7,
            "type": "call",
          },
        ],
        "line": 8,
        "type": "if",
      },
    ],
    "line": 8,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`program should accept basic body 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "action": "STEP",
        "line": 2,
        "type": "call",
      },
      Object {
        "action": "STEP",
        "line": 3,
        "type": "call",
      },
    ],
    "line": 4,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`program should accept empty 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [],
    "line": 2,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`program should accept programs without wrapping \`program\` 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "action": "STEP",
        "line": 1,
        "type": "call",
      },
      Object {
        "action": "STEP",
        "line": 2,
        "type": "call",
      },
    ],
    "line": 1,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`repeat always 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 2,
            "type": "call",
          },
        ],
        "line": 3,
        "times": Infinity,
        "type": "repeat",
      },
    ],
    "line": 3,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`repeat times 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 2,
            "type": "call",
          },
        ],
        "line": 3,
        "times": "5",
        "type": "repeat",
      },
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 6,
            "type": "call",
          },
        ],
        "line": 7,
        "times": "5",
        "type": "repeat",
      },
    ],
    "line": 3,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`repeat while 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "BRICK_TAKE",
            "line": 2,
            "type": "call",
          },
        ],
        "condition": Object {
          "line": 1,
          "test": "IS_BRICK",
          "type": "expression",
        },
        "line": 3,
        "type": "while",
      },
      Object {
        "body": "*solange",
        "condition": Array [
          Object {
            "action": "BRICK_TAKE",
            "line": 6,
            "type": "call",
          },
        ],
        "line": 7,
        "type": "while",
      },
      Object {
        "body": Array [
          Object {
            "action": "BRICK_TAKE",
            "line": 10,
            "type": "call",
          },
        ],
        "condition": Object {
          "line": 9,
          "test": "IS_BRICK",
          "type": "expression",
        },
        "line": 11,
        "type": "while",
      },
    ],
    "line": 3,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`system calls fast 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "action": "fast",
        "line": 1,
        "type": "systemCall",
      },
      Object {
        "action": "STEP",
        "line": 2,
        "type": "call",
      },
      Object {
        "action": "STEP",
        "line": 3,
        "type": "call",
      },
    ],
    "line": 1,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`system calls slow 1`] = `
Object {
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "action": "slow",
        "line": 1,
        "type": "systemCall",
      },
      Object {
        "action": "STEP",
        "line": 2,
        "type": "call",
      },
      Object {
        "action": "STEP",
        "line": 3,
        "type": "call",
      },
    ],
    "line": 1,
    "type": "program",
  },
  "type": "ast",
}
`;
